--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,3 +9,11 @@ john_doe:
     name: John Doe
     email: johndoe@email.com
     web: http://twitter.com/johndoe
+malte_sanders:
+    name: Malte Sanders
+    email: /
+    web: hier
+tung_thai:
+    name: Tung Thai
+    email: /
+    web: hier
