Change markdown from kramdown to GFM

--- a/_config.yml
+++ b/_config.yml
@@ -53,12 +53,13 @@ defaults:
       section: "post" # set the root section name
 
 # Build settings
-markdown: kramdown
+# markdown: kramdown
+markdown: GFM
 
 # Kramdown options
-kramdown:
+# kramdown:
   # Prevent IDs from being added to h1-h6 tags
-  auto_ids: false
+  # auto_ids: false
 
 # Include in processing (e.g. Netlify directives)
 # Uncomment before use
