--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,9 @@ markdown: kramdown
 kramdown:
   # Prevent IDs from being added to h1-h6 tags
   auto_ids: false
+  syntax_highlighter: rouge
+  input: GFM
+  toc_levels:     1..3
   math_engine: mathjax
 
 # Include in processing (e.g. Netlify directives)
