--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,8 +12,8 @@ john_doe:
 malte_sanders:
     name: Malte Sanders
     email: /
-    web: hier
+    web: https://blog.nwks.de
 tung_thai:
     name: Tung Thai
     email: /
-    web: hier
+    web: https://blog.nwks.de
